centralize response dto
