# src/docs/swagger.yaml
@@ -44,7 +44,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/MessageResponse'
+                $ref: '#/components/schemas/EmptyResponse'
 
   /auth/login:
     post:
@@ -122,7 +122,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/MessageResponse'
+                $ref: '#/components/schemas/EmptyResponse'
 
 components:
   schemas:
@@ -132,6 +132,27 @@ components:
         success:
           type: boolean
           example: true
+        message:
+          type: string
+    ApiErrorResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+          example: false
+        message:
+          type: string
+        errors:
+          type: array
+          items:
+            $ref: '#/components/schemas/ErrorDetail'
+    ErrorDetail:
+      type: object
+      properties:
+        path:
+          type: string
+        message:
+          type: string
     HealthResponse:
       allOf:
         - $ref: '#/components/schemas/ApiResponseBase'
@@ -143,22 +164,14 @@ components:
                 status:
                   type: string
                   example: ok
-    MessageResponse:
+    EmptyResponse:
       allOf:
         - $ref: '#/components/schemas/ApiResponseBase'
         - type: object
           properties:
             data:
-              type: object
-              properties:
-                message:
-                  type: string
-    EmptyResponse:
-      type: object
-      properties:
-        success:
-          type: boolean
-          example: true
+              nullable: true
+              example: null
     User:
       type: object
       properties:
